@@ -7,6 +7,7 @@ Revision history for perl distribution LinkEmbedder
  - Fix parsing xkcd.com links
  - Add support for extracting "application/ld+json" information
  - Add support for paste.centos.org (replaced fedoraproject paste)
+ - Changed to use twitframe.com to embed twitter posts
 
 1.12 2020-03-24T12:12:10+0900
  - Add support for reading X-Provider-Name from headers
